Image size changed, unused file delete

--- a/index.html
+++ b/index.html
@@ -7,24 +7,40 @@
 </head>
 <style>
     img {
-        width: 100px;
-        height: 100px;
+        width: 150px;
+        height: 150px;
     }
-    body{
-        background-color: rgb(141, 233, 233) ;
+
+    header>img {
+        width: 9em;
+        height: 9em;
+        margin-top: 0%;
+        margin-left: 46%;
+    }
+
+    body {
+        background-color: rgb(240, 201, 207);
+    }
+
+    ul {
+        text-align: center;
     }
 </style>
 
 <body>
-    <h2 style="text-align: center;color: rgb(8, 78, 78);"><b>ABOUT ME</b></h2>
-    <img src="./resources/375280300_1272468893437522_8592923436878480744_n.jpg">
-    <ul>
-        <li>Name: Trần Gia Hân</li>
-        <li>Age: 18+</li>
-        <li>Birth: 11.05.2005</li>
-        <li>Phone number:0973156244</li>
-        <li>Address: Trảng Bom, Đồng Nai</li>
-        <li>Email: tran.gia.han.1130@gmail.com</li>
+    <header>
+        <h2 style="text-align: center;color: rgb(8, 78, 78);"><b>ABOUT ME</b></h2>
+        <img src="./resources/375280300_1272468893437522_8592923436878480744_n.jpg">
+    </header>
+
+
+    <ul style="list-style: none;">
+        <li><b>Name</b>: Trần Gia Hân</li>
+        <li><b>Age</b>: 18+</li>
+        <li><b>Birth</b>: 11.05.2005</li>
+        <li><b>Phone number</b>:0973156244</li>
+        <li><b>Address</b>: Trảng Bom, Đồng Nai</li>
+        <li><b>Email</b>: tran.gia.han.1130@gmail.com</li>
         <li><a href="./sothich.html">Sở Thích</a></li>
     </ul>
 </body>
