--- a/sothich.html
+++ b/sothich.html
@@ -19,10 +19,14 @@
         width: 600px;
         height: 120px;
     }
+
+    body {
+        background-color: rgb(210, 238, 187);
+    }
 </style>
 
 <body>
-    <h2 style="color: rgb(0, 17, 11);"><b>HOBBIES</b></h2>
+    <h1 style="color: rgb(0, 17, 11);"><b>SỞ THÍCH</b></h1>
     <table>
         <tr>
             <h4>
